@startuml 动物园管理系统E-R图

' 设置样式使字体更清晰
skinparam defaultFontSize 14
skinparam defaultFontName "Microsoft YaHei"
skinparam classFontSize 14
skinparam classFontName "Microsoft YaHei"
skinparam classAttributeFontSize 12
skinparam classAttributeFontName "Microsoft YaHei"
skinparam backgroundColor white
skinparam linetype ortho
skinparam nodesep 80
skinparam ranksep 100
skinparam padding 5
skinparam roundCorner 5

!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define primary_key(x) <b>x</b>
!define foreign_key(x) <u>x</u>
!define column(x) <i>x</i>

' 实体定义
Table(zoos, "zoos\n(动物园表)") {
  primary_key(id) INT
  column(name) VARCHAR
  column(city) VARCHAR
  column(address) VARCHAR
  column(opening_hours) VARCHAR
  column(contact_phone) VARCHAR
  column(description) TEXT
}

Table(parks, "parks\n(园区表)") {
  primary_key(id) INT
  foreign_key(zoo_id) INT
  column(name) VARCHAR
  column(background) TEXT
  column(features) TEXT
  column(animal_distribution) JSON
  column(audio_guide) TEXT
}

Table(park_poi, "park_poi\n(点位信息表)") {
  primary_key(id) VARCHAR
  foreign_key(zoo_id) INT
  column(name) VARCHAR
  column(latitude) DECIMAL
  column(longitude) DECIMAL
  column(category) VARCHAR
  column(address) VARCHAR
}

Table(park_geometries, "park_geometries\n(园区地理范围表)") {
  primary_key(id) INT
  foreign_key(park_id) INT
  column(geometry) TEXT
}

Table(users, "users\n(用户表)") {
  primary_key(id) INT
  column(name) VARCHAR
  column(real_name) VARCHAR
  column(phone) VARCHAR
  column(openid) VARCHAR
  column(session_key) VARCHAR
  column(preference) JSON
  column(gender) VARCHAR
  column(id_number) VARCHAR
  foreign_key(current_zoo_id) INT
}

Table(user_preferences, "user_preferences\n(用户偏好表)") {
  primary_key(id) INT
  foreign_key(user_id) INT
  column(is_personalized) BOOLEAN
  column(transport_mode) VARCHAR
  column(favorite_animals) JSON
}

Table(animals, "animals\n(动物信息表)") {
  primary_key(id) INT
  column(name) VARCHAR
  column(english_name) VARCHAR
  column(scientific_name) VARCHAR
  column(habitat) VARCHAR
  column(behavior) TEXT
  column(conservation_status) ENUM
  column(description) TEXT
}

Table(safety_alerts, "safety_alerts\n(安全预警表)") {
  primary_key(id) INT
  foreign_key(user_id) INT
  foreign_key(zone_id) INT
  column(alert_time) TIMESTAMP
  column(status) ENUM
}

Table(danger_zones, "danger_zones\n(危险区域表)") {
  primary_key(id) INT
  column(name) VARCHAR
  column(description) TEXT
  column(geometry) TEXT
  column(risk_level) TINYINT
  column(status) TINYINT
}

Table(bookings, "bookings\n(园区预订表)") {
  primary_key(id) INT
  foreign_key(user_id) INT
  foreign_key(park_id) INT
  column(booking_time) TIMESTAMP
  column(status) ENUM
}

Table(park_traffic, "park_traffic\n(园区流量表)") {
  primary_key(id) INT
  foreign_key(park_id) INT
  column(current_people) INT
  column(queue_people) INT
}

Table(performances, "performances\n(动物表演表)") {
  primary_key(id) INT
  column(title) VARCHAR
  column(duration) VARCHAR
  column(location) VARCHAR
  column(description) TEXT
  column(image_url) VARCHAR
  foreign_key(park_id) INT
  column(show_time) TIME
  column(show_date) DATE
  column(status) TINYINT
  column(max_capacity) INT
  column(current_bookings) INT
}

Table(performance_bookings, "performance_bookings\n(表演预约表)") {
  primary_key(id) INT
  foreign_key(user_id) INT
  foreign_key(performance_id) INT
  column(status) ENUM
  column(booking_time) TIMESTAMP
}

Table(feedbacks, "feedbacks\n(用户反馈表)") {
  primary_key(id) INT
  foreign_key(user_id) INT
  column(name) VARCHAR
  column(contact) VARCHAR
  column(content) TEXT
  column(rating) INT
}

Table(orders, "orders\n(订单信息表)") {
  primary_key(id) INT
  column(order_number) VARCHAR
  foreign_key(user_id) INT
  column(item_name) VARCHAR
  column(quantity) INT
  column(total_amount) DECIMAL
  column(contact_name) VARCHAR
  column(contact_phone) VARCHAR
  column(visit_date) DATE
  column(status) ENUM
}

' 关系定义 - 使用中文关系名

' 动物园与园区
zoos "1" -- "*" parks : 包含 >

' 动物园与POI点
zoos "1" -- "*" park_poi : 包含 >

' 用户与动物园
zoos "1" -- "*" users : 被访问 >

' 园区与地理范围
parks "1" -- "1..* " park_geometries : 定义边界 >

' 用户与偏好
users "1" -- "0..1" user_preferences : 设置 >

' 用户与预约
users "1" -- "*" bookings : 创建预约 >

' 用户与表演预约
users "1" -- "*" performance_bookings : 预约表演 >

' 用户与反馈
users "1" -- "*" feedbacks : 提交反馈 >

' 用户与订单
users "1" -- "*" orders : 下单 >

' 用户与安全预警
users "1" -- "*" safety_alerts : 接收预警 >

' 园区与预约
parks "1" -- "*" bookings : 接收预约 >

' 园区与表演
parks "1" -- "*" performances : 举办 >

' 园区与流量
parks "1" -- "0..1" park_traffic : 监控流量 >

' 表演与预约
performances "1" -- "*" performance_bookings : 被预约 >

' 安全预警与园区(作为危险区域)
parks "1" -- "*" safety_alerts : 监控区域 >

' 图例
note "图例:\n实体: 浅红色矩形\n主键: <b>粗体</b>\n外键: <u>下划线</u>\n普通字段: <i>斜体</i>" as Legend

@enduml 